Ejecucion/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    PUNTO
    TEXTO

Grammar

Rule 0     S' -> PROGRAMA
Rule 1     empty -> <empty>
Rule 2     E -> E2
Rule 3     E -> E2 MENOR E2 AUX_MENOR
Rule 4     E -> E2 MAYOR E2 AUX_MAYOR
Rule 5     E -> E2 MENOR_IGUAL E2 AUX_MENOR_IGUAL
Rule 6     E -> E2 MAYOR_IGUAL E2 AUX_MAYOR_IGUAL
Rule 7     E -> E2 IGUAL E2 AUX_IGUAL
Rule 8     E -> E2 DIFERENTE E2 AUX_DIFERENTE
Rule 9     AUX_MENOR -> empty
Rule 10    AUX_MAYOR -> empty
Rule 11    AUX_MENOR_IGUAL -> empty
Rule 12    AUX_MAYOR_IGUAL -> empty
Rule 13    AUX_IGUAL -> empty
Rule 14    AUX_DIFERENTE -> empty
Rule 15    E2 -> E3
Rule 16    E2 -> E2 OR E3 AUX_OR
Rule 17    E2 -> E2 MAS E3 AUX_MAS
Rule 18    E2 -> E2 MENOS E3 AUX_MENOS
Rule 19    AUX_OR -> empty
Rule 20    AUX_MAS -> empty
Rule 21    AUX_MENOS -> empty
Rule 22    E3 -> E4
Rule 23    E3 -> E3 AND E4 AUX_AND
Rule 24    E3 -> E3 POR E4 AUX_POR
Rule 25    E3 -> E3 ENTRE E4 AUX_ENTRE
Rule 26    E3 -> E3 MODULO E4 AUX_MODULO
Rule 27    AUX_AND -> empty
Rule 28    AUX_POR -> empty
Rule 29    AUX_ENTRE -> empty
Rule 30    AUX_MODULO -> empty
Rule 31    E4 -> T
Rule 32    E4 -> NOT T AUX_NOT
Rule 33    AUX_NOT -> empty
Rule 34    T -> PARENTESIS_IZQUIERDO E PARENTESIS_DERECHO
Rule 35    T -> FUNCTION
Rule 36    T -> ID_COMPLETO
Rule 37    T -> VALOR_INT
Rule 38    T -> VALOR_FLOAT
Rule 39    ID_COMPLETO -> ID RANGOS
Rule 40    RANGOS -> empty
Rule 41    RANGOS -> CORCHETE_IZQUIERDO VALOR_INT CORCHETE_DERECHO RANGOS
Rule 42    V -> TIPO DOS_PUNTOS A PUNTO_COMA
Rule 43    V -> TIPO DOS_PUNTOS ID_COMPLETO PUNTO_COMA
Rule 44    TIPO -> INT
Rule 45    TIPO -> FLOAT
Rule 46    V_M -> empty
Rule 47    V_M -> V V_M
Rule 48    A -> ID_COMPLETO ASIGNACION VALOR_INT
Rule 49    A -> ID_COMPLETO ASIGNACION VALOR_FLOAT
Rule 50    A -> ID_COMPLETO ASIGNACION E
Rule 51    A -> ID_COMPLETO ASIGNACION ID_COMPLETO
Rule 52    A -> ID_COMPLETO ASIGNACION ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO
Rule 53    A -> ID_COMPLETO ASIGNACION INPUT PARENTESIS_IZQUIERDO PARENTESIS_DERECHO
Rule 54    EST -> empty
Rule 55    EST -> LOOP_ EST
Rule 56    EST -> IF_ EST
Rule 57    EST -> A PUNTO_COMA EST
Rule 58    EST -> PROCEDURE PUNTO_COMA EST
Rule 59    EST -> FUNCTION PUNTO_COMA EST
Rule 60    EST -> PRINT PARENTESIS_IZQUIERDO COMILLAS COMILLAS PARENTESIS_DERECHO PUNTO_COMA EST
Rule 61    EST -> INPUT PARENTESIS_IZQUIERDO PARENTESIS_DERECHO PUNTO_COMA EST
Rule 62    EST -> ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO PUNTO_COMA EST
Rule 63    LOOP_ -> DO_WHILE
Rule 64    LOOP_ -> WHILE_
Rule 65    LOOP_ -> FOR_
Rule 66    DO_WHILE -> DO WHILE E DOS_PUNTOS EST END LOOP PUNTO_COMA
Rule 67    WHILE_ -> WHILE AUX_WHILE1 E AUX_WHILE2 DOS_PUNTOS EST END LOOP PUNTO_COMA AUX_ENDWHILE
Rule 68    AUX_WHILE1 -> empty
Rule 69    AUX_WHILE2 -> empty
Rule 70    AUX_ENDWHILE -> empty
Rule 71    FOR_ -> FOR A PUNTO_COMA AUX_FOR1 E AUX_FOR2 PUNTO_COMA A DOS_PUNTOS EST END LOOP PUNTO_COMA AUX_ENDFOR
Rule 72    AUX_FOR1 -> empty
Rule 73    AUX_FOR2 -> empty
Rule 74    AUX_ENDFOR -> empty
Rule 75    IF_ -> IF E AUX_IF DOS_PUNTOS EST AUX_SALIRIF ELSIF_
Rule 76    ELSIF_ -> END IF AUX_ENDIF PUNTO_COMA
Rule 77    ELSIF_ -> ELSE AUX_ELSE DOS_PUNTOS EST AUX_SALIRIF END IF AUX_ENDIF PUNTO_COMA
Rule 78    ELSIF_ -> ELSIF AUX_ELSIF E AUX_ELSIF2 DOS_PUNTOS EST AUX_SALIRIF ELSIF_
Rule 79    AUX_IF -> empty
Rule 80    AUX_ELSIF -> empty
Rule 81    AUX_ELSIF2 -> empty
Rule 82    AUX_ELSE -> empty
Rule 83    AUX_SALIRIF -> empty
Rule 84    AUX_ENDIF -> empty
Rule 85    P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
Rule 86    P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA
Rule 87    F -> TIPO ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA
Rule 88    MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS MP_AUX V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
Rule 89    MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS MP_AUX V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA
Rule 90    MP_AUX -> empty
Rule 91    PROGRAMA -> PROGRAMA_H MP
Rule 92    PROGRAMA_H -> empty
Rule 93    PROGRAMA_H -> P PROGRAMA_H
Rule 94    PROGRAMA_H -> F PROGRAMA_H

Terminals, with rules where they appear

AND                  : 23
ASIGNACION           : 48 49 50 51 52 53
BEGIN                : 85 86 87 88 89
COMILLAS             : 60 60
CORCHETE_DERECHO     : 41
CORCHETE_IZQUIERDO   : 41
DIFERENTE            : 8
DO                   : 66
DOS_PUNTOS           : 42 43 66 67 71 75 77 78 85 86 87 88 89
ELSE                 : 77
ELSIF                : 78
END                  : 66 67 71 76 77 85 86 87 88 89
ENTRE                : 25
FLOAT                : 45
FOR                  : 71
FUNCTION             : 35 59 87
ID                   : 39 52 62 85 86 87 87
IF                   : 75 76 77
IGUAL                : 7
INPUT                : 53 61
INT                  : 44
LOOP                 : 66 67 71
MAIN                 : 88 89
MAS                  : 17
MAYOR                : 4
MAYOR_IGUAL          : 6
MENOR                : 3
MENOR_IGUAL          : 5
MENOS                : 18
MODULO               : 26
NOT                  : 32
OR                   : 16
PARENTESIS_DERECHO   : 34 52 53 60 61 62 85 86 87 88 89
PARENTESIS_IZQUIERDO : 34 52 53 60 61 62 85 86 87 88 89
POR                  : 24
PRINT                : 60
PROCEDURE            : 58 85 85 86 86 88 88 89 89
PUNTO                : 
PUNTO_COMA           : 42 43 57 58 59 60 61 62 66 67 71 71 71 76 77 85 85 86 86 86 87 87 87 88 88 89 89 89
RETURN               : 86 87 89
TEXTO                : 
VALOR_FLOAT          : 38 49
VALOR_INT            : 37 41 48
WHILE                : 66 67
error                : 

Nonterminals, with rules where they appear

A                    : 42 57 71 71
AUX_AND              : 23
AUX_DIFERENTE        : 8
AUX_ELSE             : 77
AUX_ELSIF            : 78
AUX_ELSIF2           : 78
AUX_ENDFOR           : 71
AUX_ENDIF            : 76 77
AUX_ENDWHILE         : 67
AUX_ENTRE            : 25
AUX_FOR1             : 71
AUX_FOR2             : 71
AUX_IF               : 75
AUX_IGUAL            : 7
AUX_MAS              : 17
AUX_MAYOR            : 4
AUX_MAYOR_IGUAL      : 6
AUX_MENOR            : 3
AUX_MENOR_IGUAL      : 5
AUX_MENOS            : 18
AUX_MODULO           : 26
AUX_NOT              : 32
AUX_OR               : 16
AUX_POR              : 24
AUX_SALIRIF          : 75 77 78
AUX_WHILE1           : 67
AUX_WHILE2           : 67
DO_WHILE             : 63
E                    : 34 50 66 67 71 75 78
E2                   : 2 3 3 4 4 5 5 6 6 7 7 8 8 16 17 18
E3                   : 15 16 17 18 23 24 25 26
E4                   : 22 23 24 25 26
ELSIF_               : 75 78
EST                  : 55 56 57 58 59 60 61 62 66 67 71 75 77 78 85 86 87 88 89
F                    : 94
FOR_                 : 65
ID_COMPLETO          : 36 43 48 49 50 51 51 52 53
IF_                  : 56
LOOP_                : 55
MP                   : 91
MP_AUX               : 88 89
P                    : 93
PROGRAMA             : 0
PROGRAMA_H           : 91 93 94
RANGOS               : 39 41
T                    : 31 32
TIPO                 : 42 43 87
V                    : 47
V_M                  : 47 85 86 87 88 89
WHILE_               : 64
empty                : 9 10 11 12 13 14 19 20 21 27 28 29 30 33 40 46 54 68 69 70 72 73 74 79 80 81 82 83 84 90 92

Parsing method: LALR

state 0

    (0) S' -> . PROGRAMA
    (91) PROGRAMA -> . PROGRAMA_H MP
    (92) PROGRAMA_H -> . empty
    (93) PROGRAMA_H -> . P PROGRAMA_H
    (94) PROGRAMA_H -> . F PROGRAMA_H
    (1) empty -> .
    (85) P -> . PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (86) P -> . PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA
    (87) F -> . TIPO ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA
    (44) TIPO -> . INT
    (45) TIPO -> . FLOAT

  ! shift/reduce conflict for PROCEDURE resolved as shift
    PROCEDURE       shift and go to state 6
    INT             shift and go to state 8
    FLOAT           shift and go to state 9

  ! PROCEDURE       [ reduce using rule 1 (empty -> .) ]

    PROGRAMA                       shift and go to state 1
    PROGRAMA_H                     shift and go to state 2
    empty                          shift and go to state 3
    P                              shift and go to state 4
    F                              shift and go to state 5
    TIPO                           shift and go to state 7

state 1

    (0) S' -> PROGRAMA .



state 2

    (91) PROGRAMA -> PROGRAMA_H . MP
    (88) MP -> . PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS MP_AUX V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (89) MP -> . PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS MP_AUX V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    PROCEDURE       shift and go to state 11

    MP                             shift and go to state 10

state 3

    (92) PROGRAMA_H -> empty .

    PROCEDURE       reduce using rule 92 (PROGRAMA_H -> empty .)


state 4

    (93) PROGRAMA_H -> P . PROGRAMA_H
    (92) PROGRAMA_H -> . empty
    (93) PROGRAMA_H -> . P PROGRAMA_H
    (94) PROGRAMA_H -> . F PROGRAMA_H
    (1) empty -> .
    (85) P -> . PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (86) P -> . PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA
    (87) F -> . TIPO ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA
    (44) TIPO -> . INT
    (45) TIPO -> . FLOAT

  ! shift/reduce conflict for PROCEDURE resolved as shift
    PROCEDURE       shift and go to state 6
    INT             shift and go to state 8
    FLOAT           shift and go to state 9

  ! PROCEDURE       [ reduce using rule 1 (empty -> .) ]

    P                              shift and go to state 4
    PROGRAMA_H                     shift and go to state 12
    empty                          shift and go to state 3
    F                              shift and go to state 5
    TIPO                           shift and go to state 7

state 5

    (94) PROGRAMA_H -> F . PROGRAMA_H
    (92) PROGRAMA_H -> . empty
    (93) PROGRAMA_H -> . P PROGRAMA_H
    (94) PROGRAMA_H -> . F PROGRAMA_H
    (1) empty -> .
    (85) P -> . PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (86) P -> . PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA
    (87) F -> . TIPO ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA
    (44) TIPO -> . INT
    (45) TIPO -> . FLOAT

  ! shift/reduce conflict for PROCEDURE resolved as shift
    PROCEDURE       shift and go to state 6
    INT             shift and go to state 8
    FLOAT           shift and go to state 9

  ! PROCEDURE       [ reduce using rule 1 (empty -> .) ]

    F                              shift and go to state 5
    PROGRAMA_H                     shift and go to state 13
    empty                          shift and go to state 3
    P                              shift and go to state 4
    TIPO                           shift and go to state 7

state 6

    (85) P -> PROCEDURE . ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (86) P -> PROCEDURE . ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    ID              shift and go to state 14


state 7

    (87) F -> TIPO . ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA

    ID              shift and go to state 15


state 8

    (44) TIPO -> INT .

    ID              reduce using rule 44 (TIPO -> INT .)
    DOS_PUNTOS      reduce using rule 44 (TIPO -> INT .)


state 9

    (45) TIPO -> FLOAT .

    ID              reduce using rule 45 (TIPO -> FLOAT .)
    DOS_PUNTOS      reduce using rule 45 (TIPO -> FLOAT .)


state 10

    (91) PROGRAMA -> PROGRAMA_H MP .

    $end            reduce using rule 91 (PROGRAMA -> PROGRAMA_H MP .)


state 11

    (88) MP -> PROCEDURE . MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS MP_AUX V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (89) MP -> PROCEDURE . MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS MP_AUX V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    MAIN            shift and go to state 16


state 12

    (93) PROGRAMA_H -> P PROGRAMA_H .

    PROCEDURE       reduce using rule 93 (PROGRAMA_H -> P PROGRAMA_H .)


state 13

    (94) PROGRAMA_H -> F PROGRAMA_H .

    PROCEDURE       reduce using rule 94 (PROGRAMA_H -> F PROGRAMA_H .)


state 14

    (85) P -> PROCEDURE ID . PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (86) P -> PROCEDURE ID . PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    PARENTESIS_IZQUIERDO shift and go to state 17


state 15

    (87) F -> TIPO ID . PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA

    PARENTESIS_IZQUIERDO shift and go to state 18


state 16

    (88) MP -> PROCEDURE MAIN . PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS MP_AUX V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (89) MP -> PROCEDURE MAIN . PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS MP_AUX V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    PARENTESIS_IZQUIERDO shift and go to state 19


state 17

    (85) P -> PROCEDURE ID PARENTESIS_IZQUIERDO . PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (86) P -> PROCEDURE ID PARENTESIS_IZQUIERDO . PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    PARENTESIS_DERECHO shift and go to state 20


state 18

    (87) F -> TIPO ID PARENTESIS_IZQUIERDO . PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA

    PARENTESIS_DERECHO shift and go to state 21


state 19

    (88) MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO . PARENTESIS_DERECHO DOS_PUNTOS MP_AUX V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (89) MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO . PARENTESIS_DERECHO DOS_PUNTOS MP_AUX V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    PARENTESIS_DERECHO shift and go to state 22


state 20

    (85) P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO . DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (86) P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO . DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    DOS_PUNTOS      shift and go to state 23


state 21

    (87) F -> TIPO ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO . DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA

    DOS_PUNTOS      shift and go to state 24


state 22

    (88) MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO . DOS_PUNTOS MP_AUX V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (89) MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO . DOS_PUNTOS MP_AUX V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    DOS_PUNTOS      shift and go to state 25


state 23

    (85) P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS . V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (86) P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS . V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA
    (46) V_M -> . empty
    (47) V_M -> . V V_M
    (1) empty -> .
    (42) V -> . TIPO DOS_PUNTOS A PUNTO_COMA
    (43) V -> . TIPO DOS_PUNTOS ID_COMPLETO PUNTO_COMA
    (44) TIPO -> . INT
    (45) TIPO -> . FLOAT

    BEGIN           reduce using rule 1 (empty -> .)
    INT             shift and go to state 8
    FLOAT           shift and go to state 9

    V_M                            shift and go to state 26
    empty                          shift and go to state 27
    V                              shift and go to state 28
    TIPO                           shift and go to state 29

state 24

    (87) F -> TIPO ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS . V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA
    (46) V_M -> . empty
    (47) V_M -> . V V_M
    (1) empty -> .
    (42) V -> . TIPO DOS_PUNTOS A PUNTO_COMA
    (43) V -> . TIPO DOS_PUNTOS ID_COMPLETO PUNTO_COMA
    (44) TIPO -> . INT
    (45) TIPO -> . FLOAT

    BEGIN           reduce using rule 1 (empty -> .)
    INT             shift and go to state 8
    FLOAT           shift and go to state 9

    TIPO                           shift and go to state 29
    V_M                            shift and go to state 30
    empty                          shift and go to state 27
    V                              shift and go to state 28

state 25

    (88) MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS . MP_AUX V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (89) MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS . MP_AUX V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA
    (90) MP_AUX -> . empty
    (1) empty -> .

    INT             reduce using rule 1 (empty -> .)
    FLOAT           reduce using rule 1 (empty -> .)
    BEGIN           reduce using rule 1 (empty -> .)

    MP_AUX                         shift and go to state 31
    empty                          shift and go to state 32

state 26

    (85) P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M . BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (86) P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M . BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    BEGIN           shift and go to state 33


state 27

    (46) V_M -> empty .

    BEGIN           reduce using rule 46 (V_M -> empty .)


state 28

    (47) V_M -> V . V_M
    (46) V_M -> . empty
    (47) V_M -> . V V_M
    (1) empty -> .
    (42) V -> . TIPO DOS_PUNTOS A PUNTO_COMA
    (43) V -> . TIPO DOS_PUNTOS ID_COMPLETO PUNTO_COMA
    (44) TIPO -> . INT
    (45) TIPO -> . FLOAT

    BEGIN           reduce using rule 1 (empty -> .)
    INT             shift and go to state 8
    FLOAT           shift and go to state 9

    V                              shift and go to state 28
    V_M                            shift and go to state 34
    empty                          shift and go to state 27
    TIPO                           shift and go to state 29

state 29

    (42) V -> TIPO . DOS_PUNTOS A PUNTO_COMA
    (43) V -> TIPO . DOS_PUNTOS ID_COMPLETO PUNTO_COMA

    DOS_PUNTOS      shift and go to state 35


state 30

    (87) F -> TIPO ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M . BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA

    BEGIN           shift and go to state 36


state 31

    (88) MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS MP_AUX . V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (89) MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS MP_AUX . V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA
    (46) V_M -> . empty
    (47) V_M -> . V V_M
    (1) empty -> .
    (42) V -> . TIPO DOS_PUNTOS A PUNTO_COMA
    (43) V -> . TIPO DOS_PUNTOS ID_COMPLETO PUNTO_COMA
    (44) TIPO -> . INT
    (45) TIPO -> . FLOAT

    BEGIN           reduce using rule 1 (empty -> .)
    INT             shift and go to state 8
    FLOAT           shift and go to state 9

    V_M                            shift and go to state 37
    empty                          shift and go to state 27
    V                              shift and go to state 28
    TIPO                           shift and go to state 29

state 32

    (90) MP_AUX -> empty .

    INT             reduce using rule 90 (MP_AUX -> empty .)
    FLOAT           reduce using rule 90 (MP_AUX -> empty .)
    BEGIN           reduce using rule 90 (MP_AUX -> empty .)


state 33

    (85) P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN . PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (86) P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN . PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    PUNTO_COMA      shift and go to state 38


state 34

    (47) V_M -> V V_M .

    BEGIN           reduce using rule 47 (V_M -> V V_M .)


state 35

    (42) V -> TIPO DOS_PUNTOS . A PUNTO_COMA
    (43) V -> TIPO DOS_PUNTOS . ID_COMPLETO PUNTO_COMA
    (48) A -> . ID_COMPLETO ASIGNACION VALOR_INT
    (49) A -> . ID_COMPLETO ASIGNACION VALOR_FLOAT
    (50) A -> . ID_COMPLETO ASIGNACION E
    (51) A -> . ID_COMPLETO ASIGNACION ID_COMPLETO
    (52) A -> . ID_COMPLETO ASIGNACION ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO
    (53) A -> . ID_COMPLETO ASIGNACION INPUT PARENTESIS_IZQUIERDO PARENTESIS_DERECHO
    (39) ID_COMPLETO -> . ID RANGOS

    ID              shift and go to state 41

    A                              shift and go to state 39
    ID_COMPLETO                    shift and go to state 40

state 36

    (87) F -> TIPO ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN . PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA

    PUNTO_COMA      shift and go to state 42


state 37

    (88) MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS MP_AUX V_M . BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (89) MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS MP_AUX V_M . BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    BEGIN           shift and go to state 43


state 38

    (85) P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA . EST END PROCEDURE PUNTO_COMA
    (86) P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA . EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA
    (54) EST -> . empty
    (55) EST -> . LOOP_ EST
    (56) EST -> . IF_ EST
    (57) EST -> . A PUNTO_COMA EST
    (58) EST -> . PROCEDURE PUNTO_COMA EST
    (59) EST -> . FUNCTION PUNTO_COMA EST
    (60) EST -> . PRINT PARENTESIS_IZQUIERDO COMILLAS COMILLAS PARENTESIS_DERECHO PUNTO_COMA EST
    (61) EST -> . INPUT PARENTESIS_IZQUIERDO PARENTESIS_DERECHO PUNTO_COMA EST
    (62) EST -> . ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO PUNTO_COMA EST
    (1) empty -> .
    (63) LOOP_ -> . DO_WHILE
    (64) LOOP_ -> . WHILE_
    (65) LOOP_ -> . FOR_
    (75) IF_ -> . IF E AUX_IF DOS_PUNTOS EST AUX_SALIRIF ELSIF_
    (48) A -> . ID_COMPLETO ASIGNACION VALOR_INT
    (49) A -> . ID_COMPLETO ASIGNACION VALOR_FLOAT
    (50) A -> . ID_COMPLETO ASIGNACION E
    (51) A -> . ID_COMPLETO ASIGNACION ID_COMPLETO
    (52) A -> . ID_COMPLETO ASIGNACION ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO
    (53) A -> . ID_COMPLETO ASIGNACION INPUT PARENTESIS_IZQUIERDO PARENTESIS_DERECHO
    (66) DO_WHILE -> . DO WHILE E DOS_PUNTOS EST END LOOP PUNTO_COMA
    (67) WHILE_ -> . WHILE AUX_WHILE1 E AUX_WHILE2 DOS_PUNTOS EST END LOOP PUNTO_COMA AUX_ENDWHILE
    (71) FOR_ -> . FOR A PUNTO_COMA AUX_FOR1 E AUX_FOR2 PUNTO_COMA A DOS_PUNTOS EST END LOOP PUNTO_COMA AUX_ENDFOR
    (39) ID_COMPLETO -> . ID RANGOS

    PROCEDURE       shift and go to state 44
    FUNCTION        shift and go to state 51
    PRINT           shift and go to state 52
    INPUT           shift and go to state 53
    ID              shift and go to state 45
    END             reduce using rule 1 (empty -> .)
    RETURN          reduce using rule 1 (empty -> .)
    IF              shift and go to state 57
    DO              shift and go to state 59
    WHILE           shift and go to state 60
    FOR             shift and go to state 61
